maven打包问题解决

--- a/eureka-admin-starter-client/pom.xml
+++ b/eureka-admin-starter-client/pom.xml
@@ -7,6 +7,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>eureka-admin-starter-client</artifactId>
+	<packaging>jar</packaging>
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
