--- a/eureka-admin-sample/eureka-admin-sample-eureka-server/pom.xml
+++ b/eureka-admin-sample/eureka-admin-sample-eureka-server/pom.xml
@@ -6,6 +6,7 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>eureka-admin-sample-eureka-server</artifactId>
+  <packaging>jar</packaging>
   
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
