--- a/eureka-admin-view/pom.xml
+++ b/eureka-admin-view/pom.xml
@@ -6,8 +6,10 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>eureka-admin-view</artifactId>
+  <packaging>jar</packaging>
   
   	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
+	
 </project>
