--- a/eureka-admin-sample/eureka-admin-sample-client-a/src/main/resources/application-dev2.yml
+++ b/eureka-admin-sample/eureka-admin-sample-client-a/src/main/resources/application-dev2.yml
@@ -9,3 +9,6 @@ eureka:
       defaultZone: http://localhost:8888/eureka/
   instance:
     prefer-ip-address: true
+management:
+  security:
+    enabled: false
